metadata: fixes overflow and hides manage channel when expanded

--- a/components/meta_pocket/stylesheets/meta_pocket.styl
+++ b/components/meta_pocket/stylesheets/meta_pocket.styl
@@ -27,6 +27,7 @@
   max-height 163px
   min-height 80px
   overflow-x visible
+  overflow-y hidden
   padding-bottom 10px
   line-height 1.5
   color textgray
@@ -47,6 +48,10 @@
     padding-top 18px
     float right
     text-align right
+
+div#metadata__column-manage
+  &.is-expanded
+    display none
 
 .settings-is-active .metadata__column--right
   display none
